Updating the main stream.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /CW/.vs/ColdWarCrypto/FileContentIndex/647f2acb-39d7-4ddb-9bed-5eefd6daf71a.vsidx
 /CW/.vs/ColdWarCrypto/FileContentIndex/9ee2bdc8-b32b-4511-b685-963f42777126.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/4bcfc6e0-349f-4aa0-b53f-dc8b811a3d81.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/d5c794d0-b07a-423b-bcf5-13c2fb547bd6.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/81b5602f-addb-4c48-868a-8c2a23103f2a.vsidx
