--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /CW/.vs/ColdWarCrypto/FileContentIndex/4bcfc6e0-349f-4aa0-b53f-dc8b811a3d81.vsidx
 /CW/.vs/ColdWarCrypto/FileContentIndex/d5c794d0-b07a-423b-bcf5-13c2fb547bd6.vsidx
 /CW/.vs/ColdWarCrypto/FileContentIndex/81b5602f-addb-4c48-868a-8c2a23103f2a.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/52ea7a16-f20e-4fc3-b4e1-4aae7413baed.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/53876ea8-fd7f-496a-acbb-16c622afaa98.vsidx
+/CW/.vs/ColdWarCrypto/FileContentIndex/a028e467-a735-495c-b2f5-79f19ad6a8db.vsidx
